fix: fixed scrollbar css

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,20 @@
 #root {
   width: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+::-webkit-scrollbar-track {
+  cursor: auto;
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #9ca3af;
+  border-radius: 8px;
+}
